# Meatloaf

./: .gitignore  CMakeLists.txt  CONTRIBUTION.md  Meatloaf.sln  Meatloaf.vcxproj  Meatloaf.vcxproj.filters  README.md  build.py  windows_x86.cmake  windows_x86_64.cmake
Meatloaf/src/: guide.hpp  interpreter.cpp  interpreter.hpp  lexer.cpp  lexer.hpp  meatloaf.cpp  parser.cpp  parser.hpp  result.hpp  types.cpp  types.hpp
Meatloaf/src/Interpreter/: interpreter.hpp  memory.cpp  memory.hpp  types.cpp  types.hpp
enc_temp_folder/14bdbfbce7c01ca0d2f14e4965c4cc0/: errors.cpp
enc_temp_folder/3669f247e7efddb2bb9ecc58b66423b/: lexer.h
enc_temp_folder/39c014b7849fb6e15c343746c894f6/: lexer.cpp
enc_temp_folder/84c22187d1c44cadf3b528fff77212e/: parser.cpp
enc_temp_folder/89663b6b8d86b544fa3b66d25b20f620/: parser.cpp
enc_temp_folder/a8ed7a24558efc448a3cd7856d443a4/: parser.h
ideas/: compiler.txt  design.todo  publish.bat  styling.txt
include/: Lexer.h  Parser.h  Task.h  errors.h  git.h  guide.h  lexer.h  osversion.h  parser.h  task.h
py_impl/: errors.py  interpreter.py  lexer.py  meatloaf.py  operation.py  parser.py  run.py  setup.py
src/: Lexer.cpp  Meatloaf.cpp  Parser.cpp  Task.cpp  errors.cpp  errors.hpp  guide.cpp  guide.hpp  lexer.cpp  lexer.hpp  meatloaf.cpp  memory.cpp  memory.hpp  parser.cpp  parser.hpp  result.hpp  task.cpp  types.cpp  types.hpp
